--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,8 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
+/[Aa]ssets/ArenaUnity/*
+
 .vscode/
 
 node_modules/
