--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,17 +1,17 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "1.17.6",
-    "com.unity.ide.rider": "3.0.15",
+    "com.unity.ide.rider": "3.0.16",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.test-framework": "1.3.0",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
     "com.unity.toolchain.linux-x86_64": "2.0.2",
     "com.unity.toolchain.macos-x86_64-linux-x86_64": "2.0.2",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.8",
-    "com.unity.webrtc": "file:/home/MAGICLEAP/elu/Desktop/webrtc_unity_plugin",
+    "com.unity.webrtc": "2.4.0-exp.11",
     "io.conix.arena.unity": "https://github.com/arenaxr/arena-unity.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
