set new arena unity url to work in hdrp

--- a/arena-hybrid-unity-app-hd/Packages/manifest.json
+++ b/arena-hybrid-unity-app-hd/Packages/manifest.json
@@ -16,7 +16,7 @@
     "com.unity.visualscripting": "1.7.8",
     "com.unity.webrtc": "2.4.0-exp.11",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
-    "io.conix.arena.unity": "https://github.com/arenaxr/arena-unity.git",
+    "io.conix.arena.unity": "https://github.com/EdwardLu2018/arena-unity.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
