add skeleton for two camera view

--- a/arena-hybrid-unity-app-urp/Packages/manifest.json
+++ b/arena-hybrid-unity-app-urp/Packages/manifest.json
@@ -11,7 +11,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.8",
     "com.unity.webrtc": "2.4.0-exp.11",
-    "io.conix.arena.unity": "https://github.com/EdwardLu2018/arena-unity.git",
+    "io.conix.arena.unity": "file:/Users/Edward/Documents/GitHub/ARENA-unity",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
