--- a/arena-hybrid-unity-app-hd/Packages/manifest.json
+++ b/arena-hybrid-unity-app-hd/Packages/manifest.json
@@ -2,7 +2,6 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.ads": "3.7.5",
     "com.unity.collab-proxy": "1.17.7",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.16",
@@ -14,7 +13,7 @@
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.8",
-    "com.unity.webrtc": "2.4.0-exp.11",
+    "com.unity.webrtc": "3.0.0-pre.4",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
     "io.conix.arena.unity": "https://github.com/EdwardLu2018/arena-unity.git",
     "com.unity.modules.ai": "1.0.0",
