--- a/arena-hybrid-unity-app/Packages/manifest.json
+++ b/arena-hybrid-unity-app/Packages/manifest.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "1.17.7",
-    "com.unity.ide.rider": "3.0.16",
-    "com.unity.ide.visualstudio": "2.0.16",
+    "com.unity.ide.rider": "3.0.18",
+    "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.test-framework": "1.3.0",
     "com.unity.textmeshpro": "3.0.6",
@@ -11,7 +11,7 @@
     "com.unity.toolchain.macos-x86_64-linux-x86_64": "2.0.2",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.8",
-    "com.unity.webrtc": "2.4.0-exp.11",
+    "com.unity.webrtc": "3.0.0-pre.4",
     "io.conix.arena.unity": "https://github.com/EdwardLu2018/arena-unity.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
