--- a/arena-hybrid-unity-app-urp/Packages/manifest.json
+++ b/arena-hybrid-unity-app-urp/Packages/manifest.json
@@ -10,7 +10,7 @@
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.8",
-    "com.unity.webrtc": "2.4.0-exp.11",
+    "com.unity.webrtc": "3.0.0-pre.4",
     "io.conix.arena.unity": "https://github.com/EdwardLu2018/arena-unity.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
