--- a/arena-hybrid-unity-app-urp/Packages/manifest.json
+++ b/arena-hybrid-unity-app-urp/Packages/manifest.json
@@ -12,7 +12,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.webrtc": "3.0.0-pre.4",
-    "io.conix.arena.unity": "file:/Users/Edward/Documents/GitHub/ARENA-unity",
+    "io.conix.arena.unity": "https://github.com/EdwardLu2018/arena-unity.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
