--- a/arena-hybrid-unity-app-hd/Packages/manifest.json
+++ b/arena-hybrid-unity-app-hd/Packages/manifest.json
@@ -11,12 +11,12 @@
     "com.unity.render-pipelines.high-definition": "14.0.6",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.2",
+    "com.unity.timeline": "1.7.3",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.webrtc": "3.0.0-pre.4",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
-    "io.conix.arena.unity": "https://github.com/EdwardLu2018/arena-unity.git",
+    "io.conix.arena.unity": "https://github.com/arenaxr/arena-unity.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
