--- a/arena-hybrid-unity-app/Packages/manifest.json
+++ b/arena-hybrid-unity-app/Packages/manifest.json
@@ -7,13 +7,13 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.test-framework": "1.3.0",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.2",
+    "com.unity.timeline": "1.7.3",
     "com.unity.toolchain.linux-x86_64": "2.0.3",
     "com.unity.toolchain.macos-x86_64-linux-x86_64": "2.0.2",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.webrtc": "3.0.0-pre.4",
-    "io.conix.arena.unity": "https://github.com/EdwardLu2018/arena-unity.git",
+    "io.conix.arena.unity": "https://github.com/arenaxr/arena-unity.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
