--- a/io.conix.arena.unity-hybrid-urp/Samples~/URP/Packages/manifest.json
+++ b/io.conix.arena.unity-hybrid-urp/Samples~/URP/Packages/manifest.json
@@ -13,7 +13,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.webrtc": "3.0.0-pre.5",
-    "io.conix.arena.unity": "https://github.com/arenaxr/arena-unity.git",
+    "io.conix.arena.unity": "file:/home/edward/Desktop/arena-unity",
     "io.conix.arena.unity-hybrid": "file:../../../../io.conix.arena.unity-hybrid",
     "io.conix.arena.unity-hybrid-urp": "file:../../../",
     "com.unity.modules.ai": "1.0.0",
