--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ Thumbs.db
 [Bb]uilds/
 [Ll]ogs/
 [Uu]ser[Ss]ettings/
-[Pp]roject[Ss]ettings/
+# [Pp]roject[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
