--- a/.github/workflows/release-please-urp.yaml
+++ b/.github/workflows/release-please-urp.yaml
@@ -9,6 +9,6 @@ jobs:
     steps:
       - uses: google-github-actions/release-please-action@v3
         with:
-          path: Addons~/io.conix.arena.renderfusion-hdrp
+          path: Addons~/io.conix.arena.renderfusion-urp
           release-type: node
-          package-name: release-please-action
+          package-name: release-please-action-urp
