--- a/Addons~/io.conix.arena.renderfusion-hdrp/package.json
+++ b/Addons~/io.conix.arena.renderfusion-hdrp/package.json
@@ -1,7 +1,9 @@
 {
     "name": "io.conix.arena.renderfusion-hdrp",
     "displayName": "ARENA RenderFusion for Unity HDRP",
+    "_release_please_version_start": "x-release-please-start-version",
     "version": "0.1.2",
+    "_release_please_version_end": "x-release-please-end-version",
     "unity": "2022.2",
     "description": "Enables RenderFusion on ARENA using Unity.",
     "dependencies": {
