--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "version": "0.1.2",
     "unity": "2022.2",
     "description": "Enables RenderFusion on ARENA using Unity.",
+    "documentationUrl": "https://github.com/arenaxr/arena-renderfusion/blob/main/README.md",
+    "changelogUrl": "https://github.com/arenaxr/arena-renderfusion/blob/main/CHANGELOG.md",
+    "licensesUrl": "https://github.com/arenaxr/arena-renderfusion/blob/main/LICENSE",
     "dependencies": {
         "com.unity.webrtc": "3.0.0-pre.6",
         "io.conix.arena.unity": "https://github.com/arenaxr/arena-unity.git"
