update arena version

--- a/Samples~/SRP/Packages/manifest.json
+++ b/Samples~/SRP/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.cloud.draco.webgl-2022": "1.0.0",
     "com.unity.toolchain.linux-x86_64": "2.0.6",
     "com.unity.webrtc": "3.0.0-pre.7",
     "io.conix.arena.renderfusion": "https://github.com/arenaxr/arena-renderfusion.git",
