--- a/Samples~/URP/Packages/manifest.json
+++ b/Samples~/URP/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ai.navigation": "1.1.5",
+    "com.unity.cloud.draco.webgl-2022": "1.0.0",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
