--- a/Addons~/io.conix.arena.renderfusion-hdrp/package.json
+++ b/Addons~/io.conix.arena.renderfusion-hdrp/package.json
@@ -15,8 +15,8 @@
         "io.conix.arena.renderfusion": "https://github.com/arenaxr/arena-renderfusion.git"
     },
     "author": {
-        "name": "The CONIX Research Center",
-        "email": "info@conix.io",
-        "url": "https://docs.arenaxr.org"
-    }
+    "name": "Carnegie Mellon University",
+    "email": "arenaxr@andrew.cmu.edu",
+    "url": "https://docs.arenaxr.org"
+  }
 }
