--- a/Addons~/io.conix.arena.renderfusion-hdrp/package.json
+++ b/Addons~/io.conix.arena.renderfusion-hdrp/package.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "_release_please_version_end": "x-release-please-end-version",
     "unity": "2022.2",
-    "description": "Enables RenderFusion on ARENA using Unity.",
+    "description": "Enables RenderFusion on ARENA using Unity's HDRP.",
     "documentationUrl": "https://github.com/arenaxr/arena-renderfusion/blob/main/README.md",
     "changelogUrl": "https://github.com/arenaxr/arena-renderfusion/blob/main/CHANGELOG.md",
     "licensesUrl": "https://github.com/arenaxr/arena-renderfusion/blob/main/LICENSE",
