--- a/Samples~/URP/Packages/manifest.json
+++ b/Samples~/URP/Packages/manifest.json
@@ -1,16 +1,18 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.5.2",
-    "com.unity.ide.rider": "3.0.31",
+    "com.unity.ai.navigation": "1.1.7",
+    "com.unity.collab-proxy": "2.7.1",
+    "com.unity.ide.rider": "3.0.34",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.render-pipelines.universal": "14.0.11",
+    "com.unity.render-pipelines.universal": "14.0.12",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.6",
     "com.unity.toolchain.linux-x86_64": "2.0.10",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.9.4",
+    "com.unity.visualscripting": "1.9.8",
+    "com.unity.webrtc": "3.0.0-pre.8",
     "io.conix.arena.renderfusion": "https://github.com/arenaxr/arena-renderfusion.git",
     "io.conix.arena.renderfusion-urp": "https://github.com/arenaxr/arena-renderfusion.git?path=/Addons~/io.conix.arena.renderfusion-urp",
     "io.conix.arena.unity": "https://github.com/arenaxr/arena-unity.git",
@@ -45,5 +47,14 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "package.openupm.com",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "org.nesnausk.gaussian-splatting"
+      ]
+    }
+  ]
 }
