--- a/Samples~/HDRP/Packages/manifest.json
+++ b/Samples~/HDRP/Packages/manifest.json
@@ -15,8 +15,8 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.8",
     "com.unity.webrtc": "3.0.0-pre.8",
-    "io.conix.arena.renderfusion": "https://github.com/arenaxr/arena-renderfusion.git",
-    "io.conix.arena.renderfusion-hdrp": "https://github.com/arenaxr/arena-renderfusion.git?path=/Addons~/io.conix.arena.renderfusion-hdrp",
+    "io.conix.arena.renderfusion": "file:../../..",
+    "io.conix.arena.renderfusion-hdrp": "file:../../../Addons~/io.conix.arena.renderfusion-hdrp",
     "io.conix.arena.unity": "https://github.com/arenaxr/arena-unity.git",
     "org.nesnausk.gaussian-splatting": "1.1.1",
     "com.unity.modules.ai": "1.0.0",
