--- a/Samples~/URP/Packages/manifest.json
+++ b/Samples~/URP/Packages/manifest.json
@@ -13,8 +13,8 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.8",
     "com.unity.webrtc": "3.0.0-pre.8",
-    "io.conix.arena.renderfusion": "https://github.com/arenaxr/arena-renderfusion.git",
-    "io.conix.arena.renderfusion-urp": "https://github.com/arenaxr/arena-renderfusion.git?path=/Addons~/io.conix.arena.renderfusion-urp",
+    "io.conix.arena.renderfusion": "file:../../..",
+    "io.conix.arena.renderfusion-urp": "file:../../../Addons~/io.conix.arena.renderfusion-urp",
     "io.conix.arena.unity": "https://github.com/arenaxr/arena-unity.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
